--- a/website/templates/line_chart.html
+++ b/website/templates/line_chart.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <center>
     <h1>{{ title }}</h1>
     <h3>Current Sentiment: {{currentSentiment}}</h3>
     <br/>
@@ -70,5 +71,6 @@
       });
 
     </script>
+    </center>
 </body>
 </html>
